Use Page layout for preview overviews

--- a/app/components/lookbook/ui/app/layout/layout.html.erb
+++ b/app/components/lookbook/ui/app/layout/layout.html.erb
@@ -25,12 +25,12 @@
           # min_sizes: [200, 200]
         }) do |sidebar|
           sidebar.with_pane("previews-nav") do |pane|
-            pane.with_title { config.previews_nav_label }
+            pane.with_label { config.previews_nav_label }
             pane.with_action(icon: :copy_minus, tooltip: "Collapse all", click: "$dispatch('nav:collapse-all', {id: 'previews-nav-tree'})")
             previews_nav
           end
           sidebar.with_pane("pages-nav") do |pane|
-            pane.with_title { config.pages_nav_label }
+            pane.with_label { config.pages_nav_label }
             pane.with_action(icon: :copy_minus, tooltip: "Collapse all", click: "$dispatch('nav:collapse-all', {id: 'pages-nav-tree'})")
             pages_nav
           end
