--- a/app/views/lookbook/previews/show.html.erb
+++ b/app/views/lookbook/previews/show.html.erb
@@ -1,7 +1,9 @@
-<%=
-  render Lookbook::UI::PreviewOverview.new(
-    preview: @preview,
-    targets: @targets.select(&:visible?)
-  )
-%>
+<%= lb_pane(id: dom_id(@preview)) do |pane| %>
+  <% pane.with_label do %>
+    <%= lb_breadcrumbs(@config.previews_nav_label, @preview.ancestors, @preview) %>
+  <% end %>
+
+  <%= render Lookbook::UI::PageBrowser.new(src: main_app.lookbook_render_preview_page_path(@preview), checksum: @preview.object_id) %>
+<% end %>
+
 
