Make page editing less janky

--- a/app/components/lookbook/ui/pages/page/page.html.erb
+++ b/app/components/lookbook/ui/pages/page/page.html.erb
@@ -1,4 +1,4 @@
-<%= render component_tag(:article, x: {data: "page"}) do %>
+<%= render component_tag(:article, x: {data: "page", "@message.window": "handleMessage"}) do %>
   <div class="page-header-wrapper page-slat">
     <header class="page-header page-container">
       <h1 class="page-title"><%= title %></h1>
