--- a/app/views/lookbook/pages/show.html.erb
+++ b/app/views/lookbook/pages/show.html.erb
@@ -3,5 +3,5 @@
     <%= lb_breadcrumbs(@config.pages_nav_label, @page.ancestors, @page) %>
   <% end %>
   
-  <%= render Lookbook::UI::PageBrowser.new(src: main_app.lookbook_render_page_path(@page), checksum: @page.source_checksum) %>
+  <%= render Lookbook::UI::PageBrowser.new(src: main_app.lookbook_render_page_path(@page)) %>
 <% end %>
