--- a/app/components/lookbook/ui/pages/page_browser/page_browser.html.erb
+++ b/app/components/lookbook/ui/pages/page_browser/page_browser.html.erb
@@ -1,3 +1,7 @@
-<%= render component_tag(key: checksum, x: {data: "pageBrowser"}) do %>
-  <iframe x-ref="iframe" src="<%= src %>" frameborder="0" @message.window="handleMessage" seamless></iframe>
+<%= render component_tag(x: {
+  data: "pageBrowser",
+  "@message.window": "handleMessage",
+  "@lookbook:page-update-start.window": "notifyUpdateRequired"
+}) do %>
+  <iframe x-ref="iframe" src="<%= src %>" frameborder="0" seamless></iframe>
 <% end %>
