--- a/app/views/layouts/lookbook/page.html.erb
+++ b/app/views/layouts/lookbook/page.html.erb
@@ -8,7 +8,7 @@
 
   <%= lookbook_asset_tags("page") %>
   
-  <title><%= @config.project_name %> | <%= @title %></title>
+  <title><%= @config.project_name %> | <%= @page.title %></title>
 </head>
 <body>
   <%= yield %>
