--- a/app/components/lookbook/ui/elements/button_group/button_group.css
+++ b/app/components/lookbook/ui/elements/button_group/button_group.css
@@ -2,4 +2,28 @@
   display: flex;
   align-items: center;
   width: fit-content;
+
+  /* .button {
+    margin-right: 5px;
+  }
+
+  .button + .button {
+    margin-left: 5px;
+  } */
+
+  /* .button + .button-group-divider {
+    margin-left: 2px;
+  }
+
+  .button-group-divider + .button {
+    margin-left: px;
+  } */
+
+  .button-group-divider {
+    flex: none;
+    width: 1px;
+    background-color: var(--lookbook-divider-color);
+    height: 40px;
+    display: block;
+  }
 }
