Header component, toolbar tweaks

--- a/app/components/lookbook/ui/app/layout/layout.html.erb
+++ b/app/components/lookbook/ui/app/layout/layout.html.erb
@@ -5,9 +5,9 @@
   },
   data: {status_bar: status_bar?.to_json}
 ) do %>
-  <header id="app-header">
+  <div id="app-header">
     <%= header %>
-  </header>
+  </div>
   
   <%=
     lb_pane_group("app-main",
