--- a/app/views/lookbook/inspector/panels/_metadata.html.erb
+++ b/app/views/lookbook/inspector/panels/_metadata.html.erb
@@ -16,6 +16,10 @@
         <td>Preview file path</td>
         <td><%= preview.preview_app_file_path %></td>
       </tr>
+      <tr>
+        <td>Display options</td>
+        <td><%= target.display_options.to_json %></td>
+      </tr>
     </tbody>
   </table>
 <% end %>
